<resources>
    <string name="app_name">MuscleForge</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="exercises">Exercises</string>
    <string name="routines">Routines</string>
    <string name="welcome">Welcome</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>

    <string name="routine1">Routine 1</string>
    <string name="routine2">Routine 2</string>
    <string name="routine3">Routine 3</string>
    <string name="routine4">Routine 4</string>
    <string name="routine5">Routine 5</string>

    <string name="hint">Introduce name for new routine</string>
    <string name="add_routine">addRoutine</string>
    <string name="confirm">Confirm</string>
    <string name="name_of_routine">Name of Routine</string>

    <string name="series">Series</string>
    <string name="repetitions">Repetitions</string>
    <string name="weight">Weight</string>

    <string name="exercise_name">Exercise Name</string>
    <string name="finish">Finish</string>
    <string name="routine">Routine</string>

    <string name="newRoutine">Create new exercise</string>
    <string name="add_exercise">Add exercise</string>
    <string name="routine_name">Routine Name</string>
    <string name="dialog_confirm_exercise_in_routine">
        Are you sure you want to delete this exercise from the routine?</string>
    <string name="dialog_confirm_exercise">Are you sure you want to delete this exercise?</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_confirm_routine">Are you sure you want to delete this routine?</string>
    <string name="accept">Accept</string>
    <string name="number_of_series">Number of series</string>
    <string name="number_of_repetitions">Number of Repetitions</string>
</resources>