<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_exercise_dialog"
        android:clipToOutline="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            style="@style/itemExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_exercise"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/exerciseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/hints"
            android:hint="@string/exercise_name"
            android:textColorHint="@color/hints" />

        <EditText
            android:id="@+id/exerciseSeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/hints"
            android:hint="@string/number_of_series"
            android:textColorHint="@color/hints" />

        <EditText
            android:id="@+id/exerciseRepetitions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/hints"
            android:hint="@string/number_of_repetitions"
            android:textColorHint="@color/hints" />

        <EditText
            android:id="@+id/exerciseWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/hints"
            android:hint="@string/weight"
            android:textColorHint="@color/hints" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/buttonConfirmCancel"
                android:text="@string/confirm"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@color/buttonConfirmCancel"
                android:text="@string/cancel"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>