<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/exerciseRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <!-- Título del ejercicio -->
    <TextView
        android:id="@+id/tvExerciseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="Nombre Ejercicio"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Cabecera de la tabla -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/series"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            android:padding="4dp"
            android:text="@string/repetitions"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"

            android:padding="4dp"
            android:text="@string/weight"
            android:textSize="23sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Valores de los datos -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSeries"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:textSize="23sp"
            tools:text="3" />

        <TextView
            android:id="@+id/tvRepetitions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:textSize="23sp"
            tools:text="15" />

        <TextView
            android:id="@+id/tvWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="4dp"
            android:textSize="23sp"
            tools:text="25" />
    </LinearLayout>

</LinearLayout>
